--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <!-- Landing Page -->
 <div class="container" id="landing">
-  <img src="little prince.jpg" alt="Little Prince Drawing">
+  <img src="little-prince.jpg" alt="Little Prince Drawing">
   <h1>Does this drawing scare you?</h1>
   <div>
     <button onclick="goStorybook()">Yes</button>
