--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="section">
       <div class="frame">
         <div class="photo">
-          <img src="Image1.jpg" alt="Hero Image"/>
+          <img src="assets/Image1.jpg" alt="Hero Image"/>
         </div>
         <div class="copy">
           <!-- Accessible H1 for SEO/semantics while visual headline stays as rotating questions -->
@@ -47,7 +47,7 @@
           <div class="cta"><a href="#compare" class="btn">See how we’re different</a></div>
         </div>
         <div class="photo">
-          <img src="Image 2.jpg" alt="Audit metaphor"/>
+          <img src="assets/Image 2.jpg" alt="Audit metaphor"/>
         </div>
       </div>
     </section>
@@ -58,7 +58,7 @@
       <div class="frame" style="grid-template-columns:1.1fr .9fr">
         <div class="photo">
           <div class="stage" id="stage">
-            <img id="stageImage" src="Image3.jpg" alt="PR vs PA">
+            <img id="stageImage" src="assets/Image3.jpg" alt="PR vs PA">
             <canvas id="revealCanvas"></canvas>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <a href="#fix" class="btn ghost">Compare with a friend</a>
           </div>
         </div>
-        <div class="photo"><img src="Image4.jpg" alt="Perspective"/></div>
+        <div class="photo"><img src="assets/Image4.jpg" alt="Perspective"/></div>
       </div>
     </section>
 
